# simple_management

./: .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yaml
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/usecases/: authentication.rs  mod.rs  ticket_ops.rs  ticket_viewing.rs  users.rs
src/config/: config_loader.rs  config_model.rs  mod.rs  stage.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs  tickets.rs  users.rs
src/domain/repositories/: ticket_ops.rs  ticket_viewing.rs  users.rs
src/domain/value_object/: mod.rs  ticket_model.rs  ticket_priority.rs  ticket_statuses.rs  user_model.rs
src/infrastructure/: mod.rs
src/infrastructure/argon2_hashing/: mod.rs
src/infrastructure/axum_http/: middlewares.rs  mod.rs  server.rs
src/infrastructure/axum_http/routers/: authentication.rs  mod.rs  ticket_ops.rs  ticket_viewing.rs  users.rs
src/infrastructure/jwt_authentication/: authentication_model.rs  jwt_model.rs  mod.rs
src/infrastructure/postgres/: mod.rs  postgres_connection.rs  schema.rs
src/infrastructure/postgres/migrations/2025-05-16-132007_init_database/: up.sql
src/infrastructure/postgres/migrations/2025-05-19-134531_tickets_table/: down.sql  up.sql
src/infrastructure/postgres/repositories/: mod.rs  ticket_ops.rs  ticket_viewing.rs  users.rs
