[package]
name = "simple_management"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum-extra = { version = "0.9.6", features = ["cookie", "typed-header"] }
cookie = "0.18.1"
async-trait = "0.1.83"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
chrono = { version = "0.4.38", features = ["serde"] }
mockall = "0.13.0"
diesel = { version = "2.2.4", features = [
    "postgres",
    "serde_json",
    "chrono",
    "r2d2",
] }
dotenvy = "0.15.7"
anyhow = "1.0.93"
argon2 = "0.5.3"
rand = "0.8.5"
jsonwebtoken = { version = "9", default-features = false }